Seperate files and folder structure

--- a/notebooks/schema.ipynb
+++ b/notebooks/schema.ipynb
@@ -2,114 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aa74d4f9-3f49-42d0-918f-cd2c8c699c7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import kagglehub\n",
-    "import pandas as pd\n",
-    "import sqlite3 as sql\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "93749496-88cb-4480-ada1-684382e7ab3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Path to dataset files: /Users/yazdan/.cache/kagglehub/datasets/dillonmyrick/bike-store-sample-database/versions/3\n"
-     ]
-    }
-   ],
-   "source": [
-    "path = kagglehub.dataset_download(\"dillonmyrick/bike-store-sample-database\")\n",
-    "\n",
-    "print(\"Path to dataset files:\", path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a35858ac-7815-460b-b127-b2ec8538cbf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brands = pd.read_csv(f'{path}/brands.csv')\n",
-    "categories = pd.read_csv(f'{path}/categories.csv')\n",
-    "customers = pd.read_csv(f'{path}/customers.csv')\n",
-    "order_items = pd.read_csv(f'{path}/order_items.csv')\n",
-    "orders = pd.read_csv(f'{path}/orders.csv')\n",
-    "products = pd.read_csv(f'{path}/products.csv')\n",
-    "staffs = pd.read_csv(f'{path}/staffs.csv')\n",
-    "stocks = pd.read_csv(f'{path}/stocks.csv')\n",
-    "stores = pd.read_csv(f'{path}/stores.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8507b4be-1dc6-4c9a-a9fa-d396c2eb3ed6",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "unable to open database file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mOperationalError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m connection=\u001b[43msql\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata/raw/bike_store.db\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mOperationalError\u001b[39m: unable to open database file"
-     ]
-    }
-   ],
-   "source": [
-    "connection=sql.connect('data/raw/bike_store.db')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "e81fcdff-2142-4cb5-8291-1b565d3cff4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'connection' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m brands.to_sql(\u001b[33m'\u001b[39m\u001b[33mbrands\u001b[39m\u001b[33m'\u001b[39m, \u001b[43mconnection\u001b[49m, if_exists=\u001b[33m'\u001b[39m\u001b[33mreplace\u001b[39m\u001b[33m'\u001b[39m, index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      2\u001b[39m categories.to_sql(\u001b[33m'\u001b[39m\u001b[33mcategories\u001b[39m\u001b[33m'\u001b[39m, connection, if_exists=\u001b[33m'\u001b[39m\u001b[33mreplace\u001b[39m\u001b[33m'\u001b[39m, index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m      3\u001b[39m customers.to_sql(\u001b[33m'\u001b[39m\u001b[33mcustomers\u001b[39m\u001b[33m'\u001b[39m, connection, if_exists=\u001b[33m'\u001b[39m\u001b[33mreplace\u001b[39m\u001b[33m'\u001b[39m, index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'connection' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "brands.to_sql('brands', connection, if_exists='replace', index=False)\n",
-    "categories.to_sql('categories', connection, if_exists='replace', index=False)\n",
-    "customers.to_sql('customers', connection, if_exists='replace', index=False)\n",
-    "order_items.to_sql('order_items', connection, if_exists='replace', index=False)\n",
-    "orders.to_sql('orders', connection, if_exists='replace', index=False)\n",
-    "products.to_sql('products', connection, if_exists='replace', index=False)\n",
-    "staffs.to_sql('staffs', connection, if_exists='replace', index=False)\n",
-    "stocks.to_sql('stocks', connection, if_exists='replace', index=False)\n",
-    "stores.to_sql('stores', connection, if_exists='replace', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "425b0abe-ae54-473b-af71-5245b21a36e5",
+   "execution_count": 1,
+   "id": "695f1cd0-5189-421e-a7ec-26c5fdf7da8f",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +21,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
-    "img = mpimg.imread('schema.png')\n",
+    "img = mpimg.imread('../figures/schema.png')  \n",
+    "\n",
     "plt.imshow(img)\n",
     "plt.axis('off')  \n",
     "plt.show()\n"
