Change my email

--- a/notebooks/tabels.ipynb
+++ b/notebooks/tabels.ipynb
@@ -1442,16 +1442,108 @@
    "id": "25ae577c-9313-497a-93b0-ce706b2aada2",
    "metadata": {},
    "source": [
-    "which srores are there?"
+    "##### which stores are there?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2d6693ca-bb5c-41b2-8074-9f4aa6bcb445",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>store_name</th>\n",
+       "      <th>phone</th>\n",
+       "      <th>email</th>\n",
+       "      <th>street</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>(831) 476-4321</td>\n",
+       "      <td>santacruz@bikes.shop</td>\n",
+       "      <td>3700 Portola Drive</td>\n",
+       "      <td>Santa Cruz</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>95060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>(516) 379-8888</td>\n",
+       "      <td>baldwin@bikes.shop</td>\n",
+       "      <td>4200 Chestnut Lane</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>11432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>(972) 530-5555</td>\n",
+       "      <td>rowlett@bikes.shop</td>\n",
+       "      <td>8000 Fairway Avenue</td>\n",
+       "      <td>Rowlett</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>75088</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store_id        store_name           phone                 email  \\\n",
+       "0         1  Santa Cruz Bikes  (831) 476-4321  santacruz@bikes.shop   \n",
+       "1         2     Baldwin Bikes  (516) 379-8888    baldwin@bikes.shop   \n",
+       "2         3     Rowlett Bikes  (972) 530-5555    rowlett@bikes.shop   \n",
+       "\n",
+       "                street        city state  zip_code  \n",
+       "0   3700 Portola Drive  Santa Cruz    CA     95060  \n",
+       "1   4200 Chestnut Lane     Baldwin    NY     11432  \n",
+       "2  8000 Fairway Avenue     Rowlett    TX     75088  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query= \"\"\"\n",
+    "SELECT * \n",
+    "FROM stores\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
   }
  ],
  "metadata": {
