Most ordered product

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "9ce16b67-eef9-42aa-81db-f9064c5a3513",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b8904680-0183-428a-94f1-a51f8fb87bfe",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "d464d9cd-45e2-4796-ad9e-3edfd43405fc",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "714d5966-fdc6-4759-83ee-c5f722d52206",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "8       Ritchey              1"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "d077423d-6b09-46ed-8bde-17d2e059e5b0",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "Text(0.5, 1.0, 'Product Count per Brand')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -195,6 +195,96 @@
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "df.plot(kind='bar',x='brand_name' ,y='product_count',legend='False',color='green')\n",
+    "plt.xlabel('BRAND')\n",
+    "plt.ylabel('COUNT')\n",
+    "plt.title(\"Product Count per Brand\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3fc705a-f186-4b70-a518-6ec1653ef50c",
+   "metadata": {},
+   "source": [
+    "#### Which product is the most ordered?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a74233ec-7502-442c-891e-884e5211a36b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>product_count_in_orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Surly Ice Cream Truck Frameset - 2016</td>\n",
+       "      <td>167</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id                           product_name  product_count_in_orders\n",
+       "0           6  Surly Ice Cream Truck Frameset - 2016                      167"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT product_id,product_name,\n",
+    "SUM(quantity) as product_count_in_orders\n",
+    "FROM orders \n",
+    "JOIN order_items \n",
+    "USING(order_id)\n",
+    "JOIN products\n",
+    "USING (product_id)\n",
+    "GROUP BY product_id\n",
+    "ORDER BY product_count_in_orders DESC\n",
+    "LIMIT 1\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd66fbd0-806d-480e-aac0-e6dc806a6d99",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.plot(kind='bar',x='brand_name' ,y='product_count',legend='False',color='green')\n",
     "plt.xlabel('BRAND')\n",
