Maximum revenue of products

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "9ce16b67-eef9-42aa-81db-f9064c5a3513",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b8904680-0183-428a-94f1-a51f8fb87bfe",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d464d9cd-45e2-4796-ad9e-3edfd43405fc",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "714d5966-fdc6-4759-83ee-c5f722d52206",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "8       Ritchey              1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d077423d-6b09-46ed-8bde-17d2e059e5b0",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "Text(0.5, 1.0, 'Product Count per Brand')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "a74233ec-7502-442c-891e-884e5211a36b",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "0           6  Surly Ice Cream Truck Frameset - 2016                      167"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,6 +274,81 @@
     "USING (product_id)\n",
     "GROUP BY product_id\n",
     "ORDER BY product_count_in_orders DESC\n",
+    "LIMIT 1\n",
+    "\"\"\"\n",
+    "execute_query(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cab52ad-12bb-4395-a757-3f1e40a6bd65",
+   "metadata": {},
+   "source": [
+    "##### Which product had the maximum revenue?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0be02fd1-6f82-4ad7-aa8c-331f892c70ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_name</th>\n",
+       "      <th>total_sale_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Trek Slash 8 27.5 - 2016</td>\n",
+       "      <td>555558.6111</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   product_id              product_name  total_sale_price\n",
+       "0           7  Trek Slash 8 27.5 - 2016       555558.6111"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT product_id,product_name,\n",
+    "    SUM(oi.quantity*(oi.list_price-oi.list_price*oi.discount)) as total_sale_price\n",
+    "FROM products p\n",
+    "JOIN order_items oi\n",
+    "USING (product_id)\n",
+    "group by product_id\n",
+    "order by total_sale_price DESC\n",
     "LIMIT 1\n",
     "\"\"\"\n",
     "execute_query(query)"
