--- a/scripts/execute_query.ipynb
+++ b/scripts/execute_query.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9f58f4a2-f5a8-429a-9c6e-b2460f8fb3c1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run '../notebooks/connection.ipynb'"
+    "%run ../notebooks/connection.ipynb\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "724b716c-674b-4ff1-a44d-58d75dd4a8dd",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,26 @@
     "    return pd.read_sql_query(query,connection)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3de06c50-5482-4851-b150-5ced9073e295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_query(query:str):\n",
+    "    return pd.read_sql_query(query,connection)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b89aa648-937b-4847-b234-dd7f5319089f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -39,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
