Prodcts sold out in each store

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "9ce16b67-eef9-42aa-81db-f9064c5a3513",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "41edc08b-224e-4825-92ac-49b9c786ea94",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "b8904680-0183-428a-94f1-a51f8fb87bfe",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "d464d9cd-45e2-4796-ad9e-3edfd43405fc",
    "metadata": {},
    "outputs": [
@@ -528,17 +528,286 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5d3b483-b367-44b5-83a0-cba9199a3cff",
+   "cell_type": "markdown",
+   "id": "2d87143d-6839-4e52-9e53-47ebcaacfaa0",
    "metadata": {},
-   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51993bee-d16d-4532-bf96-2a9e13e183e2",
+   "metadata": {},
+   "source": [
+    "##### Which product is sold out in each store?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2ae199c4-95c1-41c4-a1ae-3f9241517bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_name</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>product_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Surly Ice Cream Truck Frameset - 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Trek Remedy 29 Carbon Frameset - 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Trek Farley Alloy Frameset - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>42</td>\n",
+       "      <td>Trek Fuel EX 5 27.5 Plus - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Haro Shredder 20 - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>160</td>\n",
+       "      <td>Trek Emonda SLR 6 - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>163</td>\n",
+       "      <td>Surly Pack Rat - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>168</td>\n",
+       "      <td>Surly Straggler - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>246</td>\n",
+       "      <td>Electra Townie Original 3i EQ Ladies' - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Santa Cruz Bikes</td>\n",
+       "      <td>302</td>\n",
+       "      <td>Electra Townie Original 1 - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Electra Girl's Hawaii 1 (16-inch) - 2015/2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>47</td>\n",
+       "      <td>Trek Remedy 9.8 - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>91</td>\n",
+       "      <td>Trek Precaliber 24 (21-Speed) - Girls - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>158</td>\n",
+       "      <td>Trek CrossRip 1 - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Trek Domane SLR Frameset - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>184</td>\n",
+       "      <td>Trek Domane SL 6 Disc - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>192</td>\n",
+       "      <td>Electra Townie Go! 8i - 2017/2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>198</td>\n",
+       "      <td>Electra Townie Commute Go! - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>251</td>\n",
+       "      <td>Electra Townie Commute Go! - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Baldwin Bikes</td>\n",
+       "      <td>299</td>\n",
+       "      <td>Electra Townie Original 21D - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Surly Wednesday Frameset - 2016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>59</td>\n",
+       "      <td>Trek Domane S 5 Disc - 2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>220</td>\n",
+       "      <td>Electra Cruiser 1 Ladies' - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>259</td>\n",
+       "      <td>Electra Amsterdam Royal 8i Ladies - 2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Rowlett Bikes</td>\n",
+       "      <td>313</td>\n",
+       "      <td>Electra Townie Original 1 Ladies' - 2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          store_name  product_id  \\\n",
+       "0   Santa Cruz Bikes           6   \n",
+       "1   Santa Cruz Bikes           8   \n",
+       "2   Santa Cruz Bikes          32   \n",
+       "3   Santa Cruz Bikes          42   \n",
+       "4   Santa Cruz Bikes          92   \n",
+       "5   Santa Cruz Bikes         160   \n",
+       "6   Santa Cruz Bikes         163   \n",
+       "7   Santa Cruz Bikes         168   \n",
+       "8   Santa Cruz Bikes         246   \n",
+       "9   Santa Cruz Bikes         302   \n",
+       "10     Baldwin Bikes          22   \n",
+       "11     Baldwin Bikes          47   \n",
+       "12     Baldwin Bikes          91   \n",
+       "13     Baldwin Bikes         158   \n",
+       "14     Baldwin Bikes         175   \n",
+       "15     Baldwin Bikes         184   \n",
+       "16     Baldwin Bikes         192   \n",
+       "17     Baldwin Bikes         198   \n",
+       "18     Baldwin Bikes         251   \n",
+       "19     Baldwin Bikes         299   \n",
+       "20     Rowlett Bikes           3   \n",
+       "21     Rowlett Bikes          59   \n",
+       "22     Rowlett Bikes         220   \n",
+       "23     Rowlett Bikes         259   \n",
+       "24     Rowlett Bikes         313   \n",
+       "\n",
+       "                                     product_name  \n",
+       "0           Surly Ice Cream Truck Frameset - 2016  \n",
+       "1           Trek Remedy 29 Carbon Frameset - 2016  \n",
+       "2               Trek Farley Alloy Frameset - 2017  \n",
+       "3                 Trek Fuel EX 5 27.5 Plus - 2017  \n",
+       "4                         Haro Shredder 20 - 2017  \n",
+       "5                        Trek Emonda SLR 6 - 2018  \n",
+       "6                           Surly Pack Rat - 2018  \n",
+       "7                          Surly Straggler - 2018  \n",
+       "8    Electra Townie Original 3i EQ Ladies' - 2018  \n",
+       "9                Electra Townie Original 1 - 2018  \n",
+       "10  Electra Girl's Hawaii 1 (16-inch) - 2015/2016  \n",
+       "11                         Trek Remedy 9.8 - 2017  \n",
+       "12   Trek Precaliber 24 (21-Speed) - Girls - 2017  \n",
+       "13                         Trek CrossRip 1 - 2018  \n",
+       "14                Trek Domane SLR Frameset - 2018  \n",
+       "15                   Trek Domane SL 6 Disc - 2018  \n",
+       "16              Electra Townie Go! 8i - 2017/2018  \n",
+       "17              Electra Townie Commute Go! - 2018  \n",
+       "18              Electra Townie Commute Go! - 2018  \n",
+       "19             Electra Townie Original 21D - 2018  \n",
+       "20                Surly Wednesday Frameset - 2016  \n",
+       "21                    Trek Domane S 5 Disc - 2017  \n",
+       "22               Electra Cruiser 1 Ladies' - 2018  \n",
+       "23       Electra Amsterdam Royal 8i Ladies - 2018  \n",
+       "24       Electra Townie Original 1 Ladies' - 2018  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT store_name,product_id,product_name\n",
+    "FROM stores\n",
+    "JOIN stocks\n",
+    "USING (store_id)\n",
+    "JOIN products\n",
+    "USING (product_id)\n",
+    "WHERE quantity =0\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "execute_query(query)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "961f88c4-b75a-4043-91b1-770c0c99eef6",
+   "id": "a42c0a91-f705-4443-8eab-4d502774a056",
    "metadata": {},
    "outputs": [],
    "source": []
