Average price for each model year

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -805,9 +805,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bddbc74-acf1-4dda-a262-d51fc5b1d979",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34c42e44-96e3-4b16-a45c-9180677db14e",
+   "metadata": {},
+   "source": [
+    "##### Calculate the average bike price for each model year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ddfe75ab-70b9-4384-8b8e-59e9a3f6a06d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Year</th>\n",
+       "      <th>Average Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>980.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>1279.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>1658.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>2583.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Model Year  Average Price\n",
+       "0        2016         980.30\n",
+       "1        2017        1279.93\n",
+       "2        2018        1658.47\n",
+       "3        2019        2583.32"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query=\"\"\"\n",
+    "SELECT model_year AS 'Model Year',ROUND(AVG(list_price),2) AS 'Average Price'\n",
+    "FROM products\n",
+    "GROUP BY model_year\n",
+    "ORDER BY 'Average Price'\n",
+    "\"\"\"\n",
+    "\n",
+    "execute_query(query)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a42c0a91-f705-4443-8eab-4d502774a056",
+   "id": "1ae459eb-9a76-4367-8648-028d8c7d8aaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Axes: xlabel='Model Year'>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=execute_query(query)\n",
+    "\n",
+    "df.plot(kind='bar',x='Model Year',y='Average Price',legend='False',color='green')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3643323b-60bd-4764-ab7f-9a15e1546a29",
    "metadata": {},
    "outputs": [],
    "source": []
